[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/player_controller.gd" type="Script" id=1]
[ext_resource path="res://player/mouse_grabber.gd" type="Script" id=2]
[ext_resource path="res://player/input_direction.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/interact_raycast.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/camera_viewbob.gd" type="Script" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.7
height = 1.5

[node name="Player" type="KinematicBody" groups=["player"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 1 )

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
cull_mask = 1048573
current = true
fov = 90.0
script = ExtResource( 9 )

[node name="InteractRaycast" parent="RotationHelper" instance=ExtResource( 4 )]

[node name="MouseGrabber" type="Node" parent="."]
script = ExtResource( 2 )

[node name="InputDirection" parent="." instance=ExtResource( 3 )]
